Facades/js/openui5.template.css
/* ... */
.exf-map-point-right {transform: translate(20%, -50%); top:50%;}
.exf-map-point-top {transform: translate(-50%, -150%); left: 50%;}
.exf-map-point-bottom {transform: translate(-50%, 0%); left: 50%;}
.exf-map .marker-cluster {background-clip: padding-box; border-radius: 20px;}
.exf-map .marker-cluster div {width: 30px; height: 30px; margin-left: 5px; margin-top: 5px; color: white; text-align: center; border-radius: 15px;}
.exf-map .marker-cluster i {line-height: 30px;}
.exf-map-shape-title.leaflet-tooltip {background-color: transparent; border: none; box-shadow: none; font-weight: 600; text-shadow: 0 0 3px white;}
.exf-map-shape-selected {fill-opacity: 0.4; stroke-width: 2; stroke: rgb(8, 84, 160)}
.exf-map-shape-hover {fill-opacity: 0.4; stroke-width: 1; stroke: black}
.blinking-shape { animation: blinker 2s linear infinite; }
@keyframes blinker { 50% { opacity: 0; } }

/* Slick carousel: ImageGallery */
.slick-carousel.horizontal .slick-list {padding: 10px; box-sizing: border-box;}
.slick-carousel.horizontal .slick-list, 
.slick-carousel.horizontal .slick-track, 
.slick-carousel.horizontal .slick-slide, 
.slick-carousel.horizontal .slick-slide img {height: 100%}
.slick-carousel.horizontal .slick-slide {margin-left: 10px; box-sizing: border-box;}
.slick-carousel.horizontal .slick-prev.slick-arrow {left: 5px; z-index: 1;}
.slick-carousel.horizontal .slick-next.slick-arrow {right: 5px; z-index: 1;}
.slick-carousel.horizontal .slick-arrow:before {color: #404040}
.slick-carousel .slick-slide {overflow: hidden;}
.slick-carousel .slick-slide.selected {border: 5px solid #9cc8f7}
.slick-lightbox .slick-prev.slick-arrow {z-index: 1}
.imagecarousel-file {height: 100%; width: 180px; position: relative; background-color: #f5f5f5; cursor: pointer;}
.imagecarousel-file > i {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 200%}
.imagecarousel-title {bottom: 0; position: absolute; padding: 10px; font-size: 0.8rem; text-align: center; width: calc(100% - 20px);}
.imagecarousel-overlay {position: absolute; top: 0; width: 100%; height: 100%}
.imagecarousel-pending {position: relative; }
.imagecarousel-pending button {position: absolute; right: 0; bottom: 0; background: transparent; border: none; font-size: 2rem; opacity: .7; cursor: pointer;}
.imagecarousel-file {background-color: white; border: 1px solid rgb(217, 217, 217);}
.imagecarousel-nodata > .sapUiIcon::before {font-family: SAP-icons; content: "\e172";}

/* DataCarousel */
.exf-datacarousel-details {position: relative}
/* DataCarousel with tabs */
.exf-datacarousel-details > .sapMPanelContent > .sapMITB {margin-top: 30px;}
.exf-datacarousel-details > .sapMPanelContent > .sapMITB > .sapMITH {background-color: transparent;}

.exf-datacarousel-details > .sapUiBlockLayer,
.exf-datacarousel-details > .sapUiLocalBusyIndicator {
    background-color: rgb(247, 247, 247);
    z-index: 10;
}

/* within a datacarousel, mark the selected data row more strongly */
.exf-datacarousel-data-element .sapUiTableRowSel>.sapUiTableCell {
    box-shadow: inset 4px 0 0 var(--sapList_SelectionBorderColor);
}

    /* DocScanner */
.docScanner {aspect-ratio: 210 / 297; max-height: 100%; max-width: 100%; border: 1px solid #0854a0; box-sizing: border-box; margin: 10px; background-color: white;}
.docScannerUploader {display: none;}
.docScannerDialog .sapMDialogSection {background-color: lightgrey;}

/* Pad */
.exf-pad > .sapMPanelContent {border-bottom: 0 !important}

/* Display widgets in DialogHeader + ColorIndicator anywhere */
.sapMObjStatus {
    white-space: nowrap; 
    /* Truncate long text */
    width: 100%; 
    overflow: hidden; 
    text-overflow: ellipsis; 
    vertical-align: top;   /* prevents alignment expansion (height would increase otherwise) */
    max-width: 100%;       /* limit overflow inside layout */
}

/* Split */
/* No padding for tables with header (DynamicPage contents) filling a split panel */
.sapUiLoSplitterContent > .sapUiNoContentPadding > .sapMPanelContent  > .sapFDynamicPage > .sapFDynamicPageContentWrapper > .sapFDynamicPageContent > .sapFDynamicPageContentFitContainer {padding: 0}

/* Fullscreen */
.fullscreen {position: fixed!important; top: 0; left: 0; padding: 0; width: 100vw!important; height: 100vh!important; background: rgba(255,255,255);}
.sapUiRespGrid.fullscreen > .sapUiRespGridSpanS12 {height: 100%}
/* Fullscreen Scheduler */
.fullscreen > .sapMITBContent {padding: 0; height: 100%; max-height: 100vh;}

/* SegmentedButtons */
.segmentedButtonsError {border-color: #b00 !important; border-width: 2px !important; color: #b00 !important;}

/* Gantt */
.exf-gantt .gantt-container {height: 100%; overflow-y: hidden;}
.exf-gantt .gantt .tick {stroke: #ddd}
.bar-folder {filter: drop-shadow(0px -3px 0px rgb(0 0 0 / 0.8))}

/* Scheduler */
/* Decrease height of sing-line rows */
.sapMPlanCal.halfHeight>.sapMList>table>tbody>tr>td>.sapUiCalendarRow:not(.sapMPlanCalRowLarge)>.sapUiCalendarRowApps {
    min-height: max(2rem, 100%);
}
.sapMPlanCal.halfHeight>.sapMList .sapMListTblCell.sapMPlanCalAppRow {height: inherit;}
.sapMPlanCal.halfHeight>.sapMList .sapMPlanCalAppRow>.sapUiCalendarRow {height: 100%}
/* Stick headers + scrolling */
.sapMPlanCal.sapMPCSticky > .sapMList > .sapMListInfoTBarContainer {top: 0 !important;} 
.sapMPlanCal.sapMPCSticky > .sapMList {overflow: auto;}
/* Nav buttons */
.sapMBtn.exf-scheduler-nav {position: absolute; padding: 0;}
.sapMBtn.exf-scheduler-nav > span {height: 100%}
.sapMBtn.exf-scheduler-nav > span > .sapMBtnIcon {margin-top:auto; margin-bottom:auto; color: transparent;}
.sapMBtn.exf-scheduler-nav:hover > span > .sapMBtnIcon {color: initial;}
.sapMBtn.exf-scheduler-navleft {left: -8px;}
.sapMBtn.exf-scheduler-navright {right: 0;}
.exf-scheduler-head-year {font-weight: bold}
/* ... */

